syntax = "proto3";

option go_package = "gnss-radar/gnss-api-gateway/internal/auth/proto";

import "google/protobuf/empty.proto";

service Auth {
    rpc CheckSession(SessionId) returns (Status) {}
    rpc CreateSession(UserId) returns (SessionId) {}
    rpc DeleteSession(SessionId) returns (google.protobuf.Empty) {}
    rpc GetUserId(SessionId) returns (UserId) {}
}

message SessionId {
    string sessionId = 1;
}

message UserId {
    string userId = 1;
}

message Status {
  bool isOk = 1;
}

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative gnss-api-gateway/internal/auth/proto/auth.proto
